app1/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: randomstringgen-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: randomstringgen
  template:
    metadata:
      labels:
        app: randomstringgen
    spec:
      containers:
        - name: randomstringgen
          image: anmoltuni/kubernetes:v1.07
          imagePullPolicy: Always
