app1/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: randomstringgen-ingress
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: randomstringgen-svc
            port: 
              number: 6666
      - path: "/pingpong"
        pathType: Prefix
        backend:
          service:
            name: pong-svc
            port:
              number: 1234
